# multi-agent-architecture

./: .gitignore  03-langgraph-multiagent-genie-pat.py  05-supervisor-of-supervisors.py  README.md  pyproject.toml  run_integration_tests.py  run_tests.py
docs/: MultiAgentArchitectures.md
examples/: 02-create-tool-functions.py  03.a-langgraph-multiagent-genie-pat.py  05-supervisor-of-supervisors.py
notebooks/: 01.a-create-valona-data.py  01.b-create-reports-data.py  02-create-tool-functions.py  03-langgraph-multiagent-genie-pat.py  03.a-langgraph-multiagent-genie-pat.py  04-agent-evaluation-metrics-review-app.py  05-supervisor-of-supervisors.py  06-supervisor-progressive-disclosure.py  06-supervisor-streaming-disclosure.py  07-uc-multi-tool-reponses-agent.py
notebooks/MLFlow_Responses_API/: responses-agent-fmapi.py  responses-agent-langgraph.py
scripts/: run_tests.py
src/multi_agent/supervisor/: README_agent_configs.md  README_fmapi_supervisor_agent.md  agent_configs_example.py  fmapi_supervisor_agent.py  interface.py  supervisor_of_supervisors.py
src/multi_agent/supervisor/progressive_agent/: README_ProgressiveAgent.md  config.py  factory.py  llm.py  planner.py  prompts.py  streaming.py  supervisor.py  synthesis.py  tools.py  types.py
src/uc_multi_tool_responses_agent/: README.md  agent.py  interface.py
teams/ect/: README.md
teams/marketing/: README.md
teams/multi-layered-architecture/: README.md
teams/procurement/: README.md
teams/supply-chain/: README.md
tests/: test_requirements.txt
tests/integration/: README.md  conftest.py  test_databricks_connectivity.py  test_fmapi_supervisor_agent.py  test_supervisor_progressive_disclosure.py
tests/integration/test_supervisor/: test_supervisor_integration.py
tests/unit/: conftest.py
tests/unit/progressive_agent/: test_planner.py  test_supervisor_stream.py  test_synthesizer.py  test_tools_registry.py
tests/unit/test_supervisor/: test_supervisor_of_supervisors.py
